fix pendentes tela de estoque